--- a/board.html
+++ b/board.html
@@ -22,6 +22,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
         rel="stylesheet">
+    <!-- <link rel="stylesheet" href="./style_task_card_overlay.css">
+    <script src="./task_card_overlay_script.js"></script> -->
 </head>
 
 <body onload="updateHTML(); addTaskInit()">
@@ -142,7 +144,8 @@
                             <p>Title</p>
                             <p style="color: red;">*</p>
                         </label>
-                        <input  onclick="addRequiredTitle(this)" oninput="addRequiredTitle(this)" class="add-task-input-field" placeholder="Enter a title" type="text">
+                        <input onclick="addRequiredTitle(this)" oninput="addRequiredTitle(this)"
+                            class="add-task-input-field" placeholder="Enter a title" type="text">
                         <div class="required-text">
                             <span id="requiredTitle" class="d-none">This field is required</span>
                         </div>
@@ -161,13 +164,14 @@
                             <p>Assigned to</p>
                         </label>
                         <div id="assigned-to-input">
-                            <input type="text" class="placeholder-color" id="assigned-to-field" placeholder="Select contacts to assign"
+                            <input type="text" class="placeholder-color" id="assigned-to-field"
+                                placeholder="Select contacts to assign"
                                 onclick="toggleDropdown(); toggleAssignToIconSrc();">
-                                <div onclick="toggleDropdown(); toggleAssignToIconSrc();" class="input-icon-assign-to-container">
-                                    <img id="input-icon-assign-to"
-                                        src="./assets/svg/addTasksSvg/arrow_drop_down.svg" alt="Icon"
-                                        class="input-icon">
-                                </div>
+                            <div onclick="toggleDropdown(); toggleAssignToIconSrc();"
+                                class="input-icon-assign-to-container">
+                                <img id="input-icon-assign-to" src="./assets/svg/addTasksSvg/arrow_drop_down.svg"
+                                    alt="Icon" class="input-icon">
+                            </div>
                             <div class="dropdown-content" id="dropdown-content">
                                 <div onclick="checkIt(0)" class="dropdown-item">
                                     <div class="addTask-profilepicture">VV</div>
@@ -214,8 +218,9 @@
                             <p>Due date</p>
                             <p style="color: red;">*</p>
                         </label>
-                        <input id="dueDateInputField" onclick="addRequiredDate(this)"  oninput="addRequiredDate(this)" class="add-task-input-field" type="date" style="color: #ccc;">
-                        <div  class="required-text">
+                        <input id="dueDateInputField" onclick="addRequiredDate(this)" oninput="addRequiredDate(this)"
+                            class="add-task-input-field" type="date" style="color: #ccc;">
+                        <div class="required-text">
                             <span id="requiredDate" class="d-none">This field is required</span>
                         </div>
                     </div>
@@ -242,72 +247,72 @@
                             <input class="placeholder-color" placeholder="Select task category" type="text" readonly
                                 onclick="toggleCategoryIconSrc()">
                             <div class="input-icon-category-container">
-                                <img id="input-icon-category"
-                                    src="./assets/svg/addTasksSvg/arrow_drop_down.svg" alt="Icon"
-                                    class="input-icon-category">
+                                <img id="input-icon-category" src="./assets/svg/addTasksSvg/arrow_drop_down.svg"
+                                    alt="Icon" class="input-icon-category">
                             </div>
                             <div class="dropdown-content" id="dropdown-content">
                                 <div onclick="checkIt('Viktor Vaal')" class="dropdown-item">
                                     <div class="addTask-profilepicture">VV</div>
                                     <label class="custom-checkbox">
                                         <p>Viktor Vaal</p>
-                                        <img class="cstm-checkbox"
-                                            src="./assets/svg/addTasksSvg/Checkbutton.svg" alt="">
+                                        <img class="cstm-checkbox" src="./assets/svg/addTasksSvg/Checkbutton.svg"
+                                            alt="">
                                     </label>
                                 </div>
                                 <div onclick="checkIt('Jannik Hoff')" class="dropdown-item">
                                     <div class="addTask-profilepicture">JH</div>
                                     <label class="custom-checkbox">
                                         <p>Jannik Hoff</p>
-                                        <img class="cstm-checkbox"
-                                            src="./assets/svg/addTasksSvg/Checkbutton.svg" alt="">
+                                        <img class="cstm-checkbox" src="./assets/svg/addTasksSvg/Checkbutton.svg"
+                                            alt="">
                                     </label>
                                 </div>
                                 <div onclick="checkIt('Dany Hudson')" class="dropdown-item">
                                     <div class="addTask-profilepicture">DH</div>
                                     <label class="custom-checkbox">
                                         <p>Dany Hudson</p>
-                                        <img class="cstm-checkbox"
-                                            src="./assets/svg/addTasksSvg/Checkbutton.svg" alt="">
+                                        <img class="cstm-checkbox" src="./assets/svg/addTasksSvg/Checkbutton.svg"
+                                            alt="">
                                     </label>
                                 </div>
                             </div>
                         </div>
 
-                    <div class="addTask-subtasks">
-                        <label for="">
-                            <p>Subtasks</p>
-                        </label>
-                        <div class="addTask-section"><input class="add-task-input-field" type="text"
-                                placeholder="Add new subtask">
+                        <div class="addTask-subtasks">
+                            <label for="">
+                                <p>Subtasks</p>
+                            </label>
+                            <div class="addTask-section"><input class="add-task-input-field" type="text"
+                                    placeholder="Add new subtask">
+                            </div>
                         </div>
                     </div>
                 </div>
+
+
             </div>
 
-
-        </div>
-       
         </div>
         <div class="addTask-footer">
             <div><span style="color:red">*</span><span>This field is required</span></div>
-            <div onclick="closeAddTaskOverlay(event)" class="display-flex clear-create"><button onclick="clearInputFields()" class="clear-btn">Cancel
+            <div onclick="closeAddTaskOverlay(event)" class="display-flex clear-create"><button
+                    onclick="clearInputFields()" class="clear-btn">Cancel
                     <img src="./assets/svg/addTasksSvg/clear.svg" alt=""></button><button
                     onclick="showTaskNotification()" class="createTask-button">Create Task<img
                         src="./assets/svg/addTasksSvg/cross.svg" alt="">
                 </button></div>
 
 
-    </div>
+        </div>
 
 
-    <div class="click-notification-add-task">
-        <p>Task added to board </p> <img src="./assets/img/navBar/board.svg" alt="">
-    </div>
+        <div class="click-notification-add-task">
+            <p>Task added to board </p> <img src="./assets/img/navBar/board.svg" alt="">
+        </div>
 
 
 
-
+        <!-- <div id="task-card-overlay"></div> -->
 
 
 </body>
