--- a/board.html
+++ b/board.html
@@ -22,8 +22,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./style_task_card_overlay.css">
-    <script src="./task_card_overlay_script.js"></script> -->
+    <link rel="stylesheet" href="./style_task_card_overlay.css">
+    <script src="./task_card_overlay_script.js"></script>
 </head>
 
 <body onload="updateHTML(); addTaskInit()">
@@ -312,7 +312,7 @@
 
 
 
-        <!-- <div id="task-card-overlay"></div> -->
+        <div id="task-card-overlay"></div>
 
 
 </body>
