no changes, temp commenting out for testing

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <div class="login-form">
                 <form>
-                    <input type="email" placeholder="Email" id="email">
-                    <input type="password" placeholder="Password" id="password">
+                    <input type="email" placeholder="Email" id="email" required>
+                    <input type="password" placeholder="Password" id="password" required>
                     <div class="login-button-box">
                         <button class="login">Login</button> <button class="guest-login">Guest Login</button>
                     </div>
@@ -37,21 +37,17 @@
                 <button class="priv-legal"></span> Legal notice</button>
             </div>
         </div>
-        <div class="p1-logo-box">
+        <!-- <div class="p1-logo-box">
             <div class="p1-logo" id="p1Logo">
                 <img src="./assets/img/logo_join_pos.svg" >
-                <!-- <img src="./assets/img/Logo.png" class="logo-resp">-->
+                <img src="./assets/img/Logo.png" class="logo-resp">
 
             </div>
-        </div>
+        </div>-->
         
     </div>
-<div class="backdrop" id="backdrop"></div>
-    <!-- <div class="p1-logo-box">
-        <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg"></div>
-    </div>
-    
-    <div class="backdrop" id="backdrop"></div>-->
+<!-- <div class="backdrop" id="backdrop"></div> -->
+   
 
 </body>
 
