--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div class="login-form">
                 
-                <form id="loginForm">
-                    <input type="email" placeholder="Email" id="email">
+                <form id="loginForm" novalidate>
+                    <input type="email" placeholder="Email" id="email" >
                     <input type="password" placeholder="Password" id="password">
                     <span id="error"></span>
                     <div class="login-button-box">
