button for show PW added

--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
                 <h1>Login</h1>
             </div>
             <div class="login-form">
-                
+
                 <form id="loginForm" novalidate>
-                    <input type="email" placeholder="Email" id="email" >
-                    <input type="password" placeholder="Password" id="password">
+                    <input type="email" placeholder="Email" id="email">
+                    <!-- <input type="password" placeholder="Password" id="password"> -->
+
                     <div class="pw-wrapper">
                         <input type="password" placeholder="Password" id="password2">
-                        <input type="checkbox" id="showPassword" onclick="showPassword()">
+                        <button type="button" class="show-password"  id="showPassword" > <img src="../assets/svg/lock.svg" alt=""></button> <!--here swith url?-->
                     </div>
                     <span id="error"></span>
                     <div class="login-button-box">
-                        <button class="login" type="submit">Login</button> <button class="guest-login">Guest Login</button>
+                        <button class="login" type="submit">Login</button> <button class="guest-login">Guest
+                            Login</button>
                     </div>
                 </form>
             </div>
@@ -51,10 +53,10 @@
 
             </div>
         </div>-->
-        
+
     </div>
-<!-- <div class="backdrop" id="backdrop"></div> -->
-   
+    <!-- <div class="backdrop" id="backdrop"></div> -->
+
 
 </body>
 
