--- a/contacts.html
+++ b/contacts.html
@@ -18,9 +18,10 @@
         href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
         rel="stylesheet">
     <script src="./scripts/ContactsScript.js/contacts.js"></script>
+    <script src="./scripts/ContactsScript.js/contacts_template.js"></script>
 </head>
 
-<body>
+<body onload="getContacts()">
 
     <div class="content-width">
 
@@ -84,7 +85,7 @@
 
 
                         <div class="contacts-list">
-                            <div class="contact-item" onclick="renderContact()">
+                            <!-- <div class="contact-item" onclick="renderContact()">
                                 <div class="contact-profile-picture">JH</div>
                                 <div class="contact-details">
                                     <p class="contact-name">Jannik Hoff</p>
@@ -216,7 +217,7 @@
                                     <p class="contact-name">George Peterson</p>
                                     <p class="contact-email">george@example.com</p>
                                 </div>
-                            </div>
+                            </div> -->
 
 
                         </div>
