started working on the subtask input field

--- a/add_task.html
+++ b/add_task.html
@@ -223,8 +223,12 @@
                                         <label for="">
                                             <p>Subtasks</p>
                                         </label>
-                                        <div class="addTask-section"><input class="add-task-input-field" type="text"
-                                                placeholder="Select new subtask" readonly>
+                                        <div class="addTask-sectio subtask-section"><input class="add-task-input-field"
+                                                type="text" placeholder="Select new subtask"><img class="subtask-add"
+                                                src="./assets/img/addTask/add.svg" alt="" onclick="focusSubtaskInput()">
+                                            <div class="cancel-check-btn"><img src="./assets/img/addTask/cross.svg"
+                                                    alt=""><img class="subtask-check"
+                                                    src="./assets/img/addTask/check.svg" alt=""></div>
                                         </div>
                                     </div>
                                 </div>
