--- a/add_task.html
+++ b/add_task.html
@@ -223,7 +223,8 @@
                                         <label for="">
                                             <p>Subtasks</p>
                                         </label>
-                                        <div class="addTask-sectio subtask-section"><input class="add-task-input-field"
+                                        <div class="addTask-sectio subtask-section"><input
+                                                onclick="cancelEditSubtaskItem();" class="add-task-input-field"
                                                 type="text" placeholder="Select new subtask"><img class="subtask-add"
                                                 src="./assets/img/addTask/add.svg" alt="" onclick="focusSubtaskInput()">
                                             <div class="cancel-check-btn"><img src="./assets/img/addTask/cross.svg"
