--- a/add_task.html
+++ b/add_task.html
@@ -225,7 +225,7 @@
                                         </label>
                                         <div class="addTask-sectio subtask-section"><input
                                                 onclick="cancelEditSubtaskItem();" class="add-task-input-field"
-                                                type="text" placeholder="Select new subtask"><img class="subtask-add"
+                                                type="text" placeholder="Add new subtask"><img class="subtask-add"
                                                 src="./assets/img/addTask/add.svg" alt="" onclick="focusSubtaskInput()">
                                             <div class="cancel-check-btn"><img src="./assets/img/addTask/cross.svg"
                                                     alt=""><img class="subtask-check"
@@ -236,7 +236,10 @@
 
 
                                         <section class="subtask-list"></section>
-                                        <section id="edit-subtask-item-field" class="edit-subtask-item"></section>
+                                        <section id="edit-subtask-item-field" class="edit-subtask-item">
+                                            <input value="lalalala" type="text" name="" id="">
+                                            <div><img src="" alt=""><img src="" alt=""></div>
+                                        </section>
 
                                     </div>
 
