--- a/add_task.html
+++ b/add_task.html
@@ -236,9 +236,14 @@
 
 
                                         <section class="subtask-list"></section>
+
+
                                         <section id="edit-subtask-item-field" class="edit-subtask-item">
-                                            <input value="lalalala" type="text" name="" id="">
-                                            <div><img src="" alt=""><img src="" alt=""></div>
+                                            <input id="subtask-edit-input" class="" value="" type="text" name="" id="">
+                                            <div class="edit-subtask-btns"><img onclick="deleteSubInputValue()"
+                                                    src="./assets/svg/contacts_svg/delete.svg" alt=""><img
+                                                    onclick="confirmSubEdit()" src="./assets/img/addTask/check.svg"
+                                                    alt=""></div>
                                         </section>
 
                                     </div>
