--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     
                     <div class="pw-wrapper">
                         <input type="password" placeholder="Password" id="password">
-                        <button type="button" id="pw-icon" ><img src="../assets/svg/lock.svg" alt=""></button>
+                        <button type="button" id="pw-icon" onclick="togglePassword()" ><img src="../assets/svg/lock.svg" alt=""></button>
                     </div>
                     <span id="error"></span>
                     <div class="login-button-box">
