--- a/add_task.html
+++ b/add_task.html
@@ -225,8 +225,9 @@
                                         </label>
                                         <div class="addTask-sectio subtask-section"><input
                                                 onclick="cancelEditSubtaskItem();" class="add-task-input-field"
-                                                type="text" placeholder="Add new subtask"><img class="subtask-add"
-                                                src="./assets/img/addTask/add.svg" alt="" onclick="focusSubtaskInput()">
+                                                type="text" placeholder="Add new subtask" maxlength="30"><img
+                                                class="subtask-add" src="./assets/img/addTask/add.svg" alt=""
+                                                onclick="focusSubtaskInput()">
                                             <div class="cancel-check-btn"><img src="./assets/img/addTask/cross.svg"
                                                     alt=""><img class="subtask-check"
                                                     src="./assets/img/addTask/check.svg" alt=""
@@ -239,7 +240,8 @@
 
 
                                         <section id="edit-subtask-item-field" class="edit-subtask-item">
-                                            <input id="subtask-edit-input" class="" value="" type="text" name="" id="">
+                                            <input id="subtask-edit-input" class="" value="" type="text" name="" id=""
+                                                maxlength="30">
                                             <div class="edit-subtask-btns"><img onclick="deleteSubInputValue()"
                                                     src="./assets/svg/contacts_svg/delete.svg" alt=""><img
                                                     onclick="confirmSubEdit()" src="./assets/img/addTask/check.svg"
