added 'disabled' attribute to 'pw-icon' button for 'show-hide-pw' feature

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/login.css">
-    <title>page 1 animation sandbox</title>
+    <title>page 1 with animation and login</title>
     <script defer src="./scripts/login.js"></script>
 </head>
 
@@ -31,7 +31,7 @@
                     
                     <div class="pw-wrapper">
                         <input type="password" placeholder="Password" id="password">
-                        <button type="button" id="pw-icon" onclick="togglePassword()" ><img src="../assets/svg/lock.svg" alt=""></button>
+                        <button type="button" disabled id="pw-icon" onclick="togglePassword()" ><img src="../assets/svg/lock.svg" alt=""></button>
                     </div>
                     <span id="error"></span>
                     <div class="login-button-box">
@@ -48,16 +48,16 @@
                 <button class="priv-legal"></span> Legal notice</button>
             </div>
         </div>
-        <!-- <div class="p1-logo-box">
+           <!-- <div class="p1-logo-box">
             <div class="p1-logo" id="p1Logo">
                 <img src="./assets/img/logo_join_pos.svg" >
-                <img src="./assets/img/Logo.png" class="logo-resp">
+              <img src="./assets/img/Logo.png" class="logo-resp"> 
 
             </div>
         </div>-->
 
     </div>
-    <!-- <div class="backdrop" id="backdrop"></div> -->
+ <!-- <div class="backdrop" id="backdrop"></div>  -->
 
 
 </body>
