styling of subtask input

--- a/add_task.html
+++ b/add_task.html
@@ -228,7 +228,8 @@
                                                 type="text" placeholder="Add new subtask" maxlength="30"><img
                                                 class="subtask-add" src="./assets/img/addTask/add.svg" alt=""
                                                 onclick="focusSubtaskInput()">
-                                            <div class="cancel-check-btn"><img src="./assets/img/addTask/cross.svg"
+                                            <div class="cancel-check-btn"><img class="subtask-cancel"
+                                                    onclick="cancelSubInput()" src="./assets/img/addTask/cross.svg"
                                                     alt=""><img class="subtask-check"
                                                     src="./assets/img/addTask/check.svg" alt=""
                                                     onclick="renderSubtaskList()"></div>
@@ -240,8 +241,8 @@
 
 
                                         <section id="edit-subtask-item-field" class="edit-subtask-item">
-                                            <input id="subtask-edit-input" class="" value="" type="text" name="" id=""
-                                                maxlength="30">
+                                            <input id="subtask-edit-input" class="subtask-edit-input" value=""
+                                                type="text" name="" id="" maxlength="30">
                                             <div class="edit-subtask-btns"><img onclick="deleteSubInputValue()"
                                                     src="./assets/svg/contacts_svg/delete.svg" alt=""><img
                                                     onclick="confirmSubEdit()" src="./assets/img/addTask/check.svg"
