added link to to shígnup page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div class="login-content-box" id="loginContentBox">
         <div class="nau-sign-up-box">
-            <div class="nau-sign-up"><span class="text-nau">Not a Join user?</span><button class="">Sign Up</button>
+            <div class="nau-sign-up"><span class="text-nau">Not a Join user?</span>
+                <a href="./sign_up.html"><button class="">Sign Up</button></a>
             </div>
         </div>
         <div class="login-content">
