link to privacy policy and legal notice added

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
         <div class="prvt-polce-legl-note-box">
             <div class="prvt-polce-legl-note">
-                <button class="priv-legal"></span> Privacy Policy</button>
-                <button class="priv-legal"></span> Legal notice</button>
+                <a href="./datenschutz.html" class="priv-legal">Privacy Policy</a>
+                <a href="./legal_notice.html" class="priv-legal">Legal notice</a>
             </div>
         </div>
            <!-- <div class="p1-logo-box">
